2010-03-25 Emilio Meschi <emilio.meschi@cern.ch>

	* tag V02-02-02
	* remove using namespace std; from icc file
	
2010-03-23 Emilio Meschi <emilio.meschi@cern.ch>

	* tag V02-02-01
	* added Vulture
	
2010-03-05 Emilio Meschi <emilio.meschi@cern.ch>

	* tag V02-02-00
	* more fixes for correct updating of HLT cters and DQM

2010-02-15 Emilio Meschi <emilio.meschi@cern.ch>

	* tag V02-01-00
	* fixes for correct updating of HLT cters and DQM
	
2010-02-02 Emilio Meschi <emilio.meschi@cern.ch>

	* tag V02-00-10
	* fix monitorreceiver appdesc broken by xdaq10

2010-02-02 Emilio Meschi <emilio.meschi@cern.ch>

	* tag V02-00-09-00
	* put back fix for compilation warning from branch

2010-01-27 Emilio Meschi <emilio.meschi@cern.ch>

	* tag V02-00-07-01 (branch)
	* remove warning again

2010-01-27 Emilio Meschi <emilio.meschi@cern.ch>

	* tag V02-00-07-00 (branch)
	* remove last compilation warning

2010-01-20 Emilio Meschi <emilio.meschi@cern.ch>

	* tag V02-00-09
	* add general counters for processed and accepted events to HLTS message
	* add web interface for counters
	
2010-01-20 Emilio Meschi <emilio.meschi@cern.ch>

	* tag V02-00-08
	* fix for dangling FDs from ptHTTP in slave processes
	
2010-01-20 Emilio Meschi <emilio.meschi@cern.ch>

	* tag V02-00-07
	* remove compilation warnings for gcc4 (P.E.)
	
2009-11-17 Emilio Meschi <emilio.meschi@cern.ch>

	* tag V02-00-06
	* remove some rare deadlocks causing problems in stop
	
2009-11-09 Emilio Meschi <emilio.meschi@cern.ch>

	* tag V02-00-05
	* update HLT menu upon reconfiguration on start

2009-11-09 Emilio Meschi <emilio.meschi@cern.ch>

	* tag V02-00-04
	* fix one deadlock in slave and stuck summarize loop in stopping
	
2009-11-06 Emilio Meschi <emilio.meschi@cern.ch>

	* tag V02-00-03
	* flashlist available at initialization time
	* improve stability of stop transition
	* cleanup printouts
	* fix deadlock of scalers update when some process crashes
	
2009-11-02 Emilio Meschi <emilio.meschi@cern.ch>

	* tag V02-00-02