@@ -46,7 +46,6 @@
 #include <stdio.h>
 #include <errno.h>
 
-using namespace std;
 using namespace evf;
 using namespace cgicc;
 
@@ -107,6 +106,7 @@ FUEventProcessor::FUEventProcessor(xdaq::ApplicationStub *s)
   , superSleepSec_(1)
   , iDieUrl_("http://fuval-c2f12-14")
   , vulture_(0)
+  , vp_(0)
 {
   names_.push_back("nbProcessed"    );
   names_.push_back("nbAccepted"     );
@@ -170,7 +170,7 @@ FUEventProcessor::FUEventProcessor(xdaq::ApplicationStub *s)
 
   std::stringstream oss2;
   oss2<<"urn:xdaq-monitorable-"<<class_.toString();
-  string monInfoSpaceName=oss2.str();
+  std::string monInfoSpaceName=oss2.str();
   toolbox::net::URN urn = this->createQualifiedInfoSpace(monInfoSpaceName);
   monitorInfoSpace_ = xdata::getInfoSpaceFactory()->get(urn.toString());
 
@@ -185,7 +185,7 @@ FUEventProcessor::FUEventProcessor(xdaq::ApplicationStub *s)
 
   std::stringstream oss3;
   oss3<<"urn:xdaq-scalers-"<<class_.toString();
-  string monInfoSpaceName2=oss3.str();
+  std::string monInfoSpaceName2=oss3.str();
   toolbox::net::URN urn2 = this->createQualifiedInfoSpace(monInfoSpaceName2);
 
   xdata::InfoSpace *scalersInfoSpace_ = xdata::getInfoSpaceFactory()->get(urn2.toString());
@@ -234,8 +234,8 @@ FUEventProcessor::FUEventProcessor(xdaq::ApplicationStub *s)
   }
   ML::MLlog4cplus::setAppl(this);      
 
-  typedef set<xdaq::ApplicationDescriptor*> AppDescSet_t;
-  typedef AppDescSet_t::iterator            AppDescIter_t;
+  typedef std::set<xdaq::ApplicationDescriptor*> AppDescSet_t;
+  typedef AppDescSet_t::iterator                 AppDescIter_t;
   
   AppDescSet_t rcms=
     getApplicationContext()->getDefaultZone()->
@@ -256,7 +256,7 @@ FUEventProcessor::FUEventProcessor(xdaq::ApplicationStub *s)
   pthread_mutex_init(&pickup_lock_,0);
 
   std::ostringstream ost;
-  ost  << "<div id=\"ve\">2.2.0 (" << edm::getReleaseVersion() <<")</div>"
+  ost  << "<div id=\"ve\">2.2.1 (" << edm::getReleaseVersion() <<")</div>"
        << "<div id=\"ou\">" << outPut_.toString() << "</div>"
        << "<div id=\"sh\">" << hasShMem_.toString() << "</div>"
        << "<div id=\"mw\">" << hasModuleWebRegistry_.toString() << "</div>"
@@ -282,16 +282,18 @@ FUEventProcessor::FUEventProcessor(xdaq::ApplicationStub *s)
       << " " << buf->release << " " << buf->version << " " << buf->machine << "</div>";
   updaterStatic_ = ost.str();
   startSupervisorLoop();  
+  if(vulture_==0) vulture_ = new Vulture(true);
 }
-
+//___________here ends the *huge* constructor___________________________________
 
 
 //______________________________________________________________________________
 FUEventProcessor::~FUEventProcessor()
 {
   // no longer needed since the wrapper is a member of the class and one can rely on 
-  // implicit destructor - to be revised
+  // implicit destructor - to be revised - at any rate the most common exit path is via "kill"...
   //  if (evtProcessor_) delete evtProcessor_;
+  if(vulture_ != 0) delete vulture_;
 }
 
 
@@ -346,7 +348,7 @@ bool FUEventProcessor::configuring(toolbox::task::WorkLoop* wl)
       }
   }
   catch (xcept::Exception &e) {
-    reasonForFailedState_ = "configuring FAILED: " + (string)e.what();
+    reasonForFailedState_ = "configuring FAILED: " + (std::string)e.what();
     fsm_.fireFailed(reasonForFailedState_,this);
     localLog(reasonForFailedState_);
   }
@@ -363,7 +365,7 @@ bool FUEventProcessor::configuring(toolbox::task::WorkLoop* wl)
   catch(...) {
     fsm_.fireFailed("Unknown Exception",this);
   }
-  if(vulture_==0) vulture_ = new Vulture(iDieUrl_.value_,true);
+
   return false;
 }
 
@@ -422,8 +424,8 @@ bool FUEventProcessor::enabling(toolbox::task::WorkLoop* wl)
     }
   
   startSummarizeWorkLoop();
-  pid_t vp = vulture_->start(runNumber_.value_);
-  if(vp==0) return false;
+  vp_ = vulture_->start(iDieUrl_.value_,runNumber_.value_);
+
   LOG4CPLUS_INFO(getApplicationLogger(),"Finished enabling!");
   fsm_.fireEvent("EnableDone",this);
   localLog("-I- Start completed");
@@ -451,7 +453,7 @@ bool FUEventProcessor::halting(toolbox::task::WorkLoop* wl)
     evtProcessor_.stopAndHalt();
   }
   catch (evf::Exception &e) {
-    reasonForFailedState_ = "halting FAILED: " + (string)e.what();
+    reasonForFailedState_ = "halting FAILED: " + (std::string)e.what();
     localLog(reasonForFailedState_);
     fsm_.fireFailed(reasonForFailedState_,this);
   }
@@ -478,7 +480,7 @@ void FUEventProcessor::actionPerformed(xdata::Event& e)
 {
 
   if (e.type()=="ItemChangedEvent" && fsm_.stateName()->toString()!="Halted") {
-    string item = dynamic_cast<xdata::ItemChangedEvent&>(e).itemName();
+    std::string item = dynamic_cast<xdata::ItemChangedEvent&>(e).itemName();
     
     if ( item == "parameterSet") {
       LOG4CPLUS_WARN(getApplicationLogger(),
@@ -587,63 +589,63 @@ void FUEventProcessor::spotlightWebPage(xgi::Input  *in, xgi::Output *out)
   throw (xgi::exception::Exception)
 {
 
-  string urn = getApplicationDescriptor()->getURN();
+  std::string urn = getApplicationDescriptor()->getURN();
 
   *out << "<!-- base href=\"/" <<  urn
-       << "\"> -->" << endl;
-  *out << "<html>"                                                   << endl;
-  *out << "<head>"                                                   << endl;
+       << "\"> -->" << std::endl;
+  *out << "<html>"                                                   << std::endl;
+  *out << "<head>"                                                   << std::endl;
   *out << "<link type=\"text/css\" rel=\"stylesheet\"";
-  *out << " href=\"/evf/html/styles.css\"/>"                   << endl;
+  *out << " href=\"/evf/html/styles.css\"/>"                   << std::endl;
   *out << "<title>" << getApplicationDescriptor()->getClassName() 
        << getApplicationDescriptor()->getInstance() 
-       << " MAIN</title>"     << endl;
-  *out << "</head>"                                                  << endl;
-  *out << "<body>"                                                   << endl;
-  *out << "<table border=\"0\" width=\"100%\">"                      << endl;
-  *out << "<tr>"                                                     << endl;
-  *out << "  <td align=\"left\">"                                    << endl;
-  *out << "    <img"                                                 << endl;
-  *out << "     align=\"middle\""                                    << endl;
-  *out << "     src=\"/evf/images/spoticon.jpg\""			     << endl;
-  *out << "     alt=\"main\""                                        << endl;
-  *out << "     width=\"64\""                                        << endl;
-  *out << "     height=\"64\""                                       << endl;
-  *out << "     border=\"\"/>"                                       << endl;
-  *out << "    <b>"                                                  << endl;
+       << " MAIN</title>"     << std::endl;
+  *out << "</head>"                                                  << std::endl;
+  *out << "<body>"                                                   << std::endl;
+  *out << "<table border=\"0\" width=\"100%\">"                      << std::endl;
+  *out << "<tr>"                                                     << std::endl;
+  *out << "  <td align=\"left\">"                                    << std::endl;
+  *out << "    <img"                                                 << std::endl;
+  *out << "     align=\"middle\""                                    << std::endl;
+  *out << "     src=\"/evf/images/spoticon.jpg\""			     << std::endl;
+  *out << "     alt=\"main\""                                        << std::endl;
+  *out << "     width=\"64\""                                        << std::endl;
+  *out << "     height=\"64\""                                       << std::endl;
+  *out << "     border=\"\"/>"                                       << std::endl;
+  *out << "    <b>"                                                  << std::endl;
   *out << getApplicationDescriptor()->getClassName() 
-       << getApplicationDescriptor()->getInstance()                  << endl;
-  *out << "      " << fsm_.stateName()->toString()                   << endl;
-  *out << "    </b>"                                                 << endl;
-  *out << "  </td>"                                                  << endl;
-  *out << "  <td width=\"32\">"                                      << endl;
-  *out << "    <a href=\"/urn:xdaq-application:lid=3\">"             << endl;
-  *out << "      <img"                                               << endl;
-  *out << "       align=\"middle\""                                  << endl;
-  *out << "       src=\"/hyperdaq/images/HyperDAQ.jpg\""             << endl;
-  *out << "       alt=\"HyperDAQ\""                                  << endl;
-  *out << "       width=\"32\""                                      << endl;
-  *out << "       height=\"32\""                                     << endl;
-  *out << "       border=\"\"/>"                                     << endl;
-  *out << "    </a>"                                                 << endl;
-  *out << "  </td>"                                                  << endl;
-  *out << "  <td width=\"32\">"                                      << endl;
-  *out << "  </td>"                                                  << endl;
-  *out << "  <td width=\"32\">"                                      << endl;
-  *out << "    <a href=\"/" << urn << "/\">"                         << endl;
-  *out << "      <img"                                               << endl;
-  *out << "       align=\"middle\""                                  << endl;
-  *out << "       src=\"/evf/images/epicon.jpg\""		     << endl;
-  *out << "       alt=\"main\""                                      << endl;
-  *out << "       width=\"32\""                                      << endl;
-  *out << "       height=\"32\""                                     << endl;
-  *out << "       border=\"\"/>"                                     << endl;
-  *out << "    </a>"                                                 << endl;
-  *out << "  </td>"                                                  << endl;
-  *out << "</tr>"                                                    << endl;
-  *out << "</table>"                                                 << endl;
+       << getApplicationDescriptor()->getInstance()                  << std::endl;
+  *out << "      " << fsm_.stateName()->toString()                   << std::endl;
+  *out << "    </b>"                                                 << std::endl;
+  *out << "  </td>"                                                  << std::endl;
+  *out << "  <td width=\"32\">"                                      << std::endl;
+  *out << "    <a href=\"/urn:xdaq-application:lid=3\">"             << std::endl;
+  *out << "      <img"                                               << std::endl;
+  *out << "       align=\"middle\""                                  << std::endl;
+  *out << "       src=\"/hyperdaq/images/HyperDAQ.jpg\""             << std::endl;
+  *out << "       alt=\"HyperDAQ\""                                  << std::endl;
+  *out << "       width=\"32\""                                      << std::endl;
+  *out << "       height=\"32\""                                     << std::endl;
+  *out << "       border=\"\"/>"                                     << std::endl;
+  *out << "    </a>"                                                 << std::endl;
+  *out << "  </td>"                                                  << std::endl;
+  *out << "  <td width=\"32\">"                                      << std::endl;
+  *out << "  </td>"                                                  << std::endl;
+  *out << "  <td width=\"32\">"                                      << std::endl;
+  *out << "    <a href=\"/" << urn << "/\">"                         << std::endl;
+  *out << "      <img"                                               << std::endl;
+  *out << "       align=\"middle\""                                  << std::endl;
+  *out << "       src=\"/evf/images/epicon.jpg\""		     << std::endl;
+  *out << "       alt=\"main\""                                      << std::endl;
+  *out << "       width=\"32\""                                      << std::endl;
+  *out << "       height=\"32\""                                     << std::endl;
+  *out << "       border=\"\"/>"                                     << std::endl;
+  *out << "    </a>"                                                 << std::endl;
+  *out << "  </td>"                                                  << std::endl;
+  *out << "</tr>"                                                    << std::endl;
+  *out << "</table>"                                                 << std::endl;
 
-  *out << "<hr/>"                                                    << endl;
+  *out << "<hr/>"                                                    << std::endl;
   
   std::ostringstream ost;
   if(isChildProcess_) 
@@ -656,15 +658,15 @@ void FUEventProcessor::spotlightWebPage(xgi::Input  *in, xgi::Output *out)
   else if(evtProcessor_)
     evtProcessor_.summaryWebPage(in,out,urn);
   else
-    *out << "<td>HLT Unconfigured</td>" << endl;
-  *out << "</table>"                                                 << endl;
+    *out << "<td>HLT Unconfigured</td>" << std::endl;
+  *out << "</table>"                                                 << std::endl;
   
-  *out << "<br><textarea rows=" << 10 << " cols=80 scroll=yes>"      << endl;
-  *out << configuration_                                             << endl;
-  *out << "</textarea><P>"                                           << endl;
+  *out << "<br><textarea rows=" << 10 << " cols=80 scroll=yes>"      << std::endl;
+  *out << configuration_                                             << std::endl;
+  *out << "</textarea><P>"                                           << std::endl;
   
-  *out << "</body>"                                                  << endl;
-  *out << "</html>"                                                  << endl;
+  *out << "</body>"                                                  << std::endl;
+  *out << "</html>"                                                  << std::endl;
 
 
 }
@@ -696,7 +698,7 @@ void FUEventProcessor::pathNames(xgi::Input  *in, xgi::Output *out)
 
 void FUEventProcessor::attachDqmToShm() throw (evf::Exception)  
 {
-  string errmsg;
+  std::string errmsg;
   bool success = false;
   try {
     edm::ServiceRegistry::Operate operate(evtProcessor_->getToken());
@@ -705,7 +707,7 @@ void FUEventProcessor::attachDqmToShm() throw (evf::Exception)
     if (!success) errmsg = "Failed to attach DQM service to shared memory";
   }
   catch (cms::Exception& e) {
-    errmsg = "Failed to attach DQM service to shared memory: " + (string)e.what();
+    errmsg = "Failed to attach DQM service to shared memory: " + (std::string)e.what();
   }
   if (!errmsg.empty()) XCEPT_RAISE(evf::Exception,errmsg);
 }
@@ -714,7 +716,7 @@ void FUEventProcessor::attachDqmToShm() throw (evf::Exception)
 
 void FUEventProcessor::detachDqmFromShm() throw (evf::Exception)
 {
-  string errmsg;
+  std::string errmsg;
   bool success = false;
   try {
     edm::ServiceRegistry::Operate operate(evtProcessor_->getToken());
@@ -723,7 +725,7 @@ void FUEventProcessor::detachDqmFromShm() throw (evf::Exception)
     if (!success) errmsg = "Failed to detach DQM service from shared memory";
   }
   catch (cms::Exception& e) {
-    errmsg = "Failed to detach DQM service from shared memory: " + (string)e.what();
+    errmsg = "Failed to detach DQM service from shared memory: " + (std::string)e.what();
   }
   if (!errmsg.empty()) XCEPT_RAISE(evf::Exception,errmsg);
 }
@@ -731,7 +733,7 @@ void FUEventProcessor::detachDqmFromShm() throw (evf::Exception)
 
 std::string FUEventProcessor::logsAsString()
 {
-  ostringstream oss;
+  std::ostringstream oss;
   if(logWrap_)
     {
       for(unsigned int i = logRingIndex_; i < logRing_.size(); i++)
@@ -746,7 +748,7 @@ std::string FUEventProcessor::logsAsString()
   return oss.str();
 }
   
-void FUEventProcessor::localLog(string m)
+void FUEventProcessor::localLog(std::string m)
 {
   timeval tv;
 
@@ -757,7 +759,7 @@ void FUEventProcessor::localLog(string m)
 
   if(logRingIndex_ == 0){logWrap_ = true; logRingIndex_ = logRingSize_;}
   logRingIndex_--;
-  ostringstream timestamp;
+  std::ostringstream timestamp;
   timestamp << " at " << datestring;
   m += timestamp.str();
   logRing_[logRingIndex_] = m;
@@ -882,7 +884,7 @@ bool FUEventProcessor::supervisor(toolbox::task::WorkLoop *)
       if(killedOrNot==subs_[i].pid()) subs_[i].setStatus((WIFEXITED(sl) != 0 ? 0 : -1));
       else continue;
       pthread_mutex_lock(&pickup_lock_);
-      ostringstream ost;
+      std::ostringstream ost;
       if(subs_[i].alive()==0) ost << " process exited with status " << WEXITSTATUS(sl);
       else if(WIFSIGNALED(sl)!=0) ost << " process terminated with signal " << WTERMSIG(sl);
       else ost << " process stopped ";
@@ -890,7 +892,7 @@ bool FUEventProcessor::supervisor(toolbox::task::WorkLoop *)
       subs_[i].setReasonForFailed(ost.str());
       spMStates_[i] = edm::event_processor::sInvalid;
       spmStates_[i] = 0;
-      ostringstream ost1;
+      std::ostringstream ost1;
       ost1 << "-E- Slave " << subs_[i].pid() << ost.str();
       localLog(ost1.str());
       if(!autoRestartSlaves_.value_) subs_[i].disconnect();
@@ -953,7 +955,7 @@ bool FUEventProcessor::supervisor(toolbox::task::WorkLoop *)
 		    }
 		  else
 		    {
-		      ostringstream ost1;
+		      std::ostringstream ost1;
 		      ost1 << "-I- New Process " << rr << " forked for slot " << i; 
 		      localLog(ost1.str());
 		    }
@@ -1349,7 +1351,7 @@ bool FUEventProcessor::enableCommon()
       return false;
     }
     if(sc != 0) {
-      ostringstream oss;
+      std::ostringstream oss;
       oss<<"EventProcessor::runAsync returned status code " << sc;
       reasonForFailedState_ = oss.str();
       fsm_.fireFailed(reasonForFailedState_,this);
@@ -1358,7 +1360,7 @@ bool FUEventProcessor::enableCommon()
     }
   }
   catch (xcept::Exception &e) {
-    reasonForFailedState_ = "enabling FAILED: " + (string)e.what();
+    reasonForFailedState_ = "enabling FAILED: " + (std::string)e.what();
     fsm_.fireFailed(reasonForFailedState_,this);
     localLog(reasonForFailedState_);
     return false;
@@ -1367,7 +1369,7 @@ bool FUEventProcessor::enableCommon()
     fsm_.fireEvent("EnableDone",this);
   }
   catch (xcept::Exception &e) {
-    std::cout << "exception " << (string)e.what() << std::endl;
+    std::cout << "exception " << (std::string)e.what() << std::endl;
     throw;
   }
 
@@ -1419,7 +1421,7 @@ bool FUEventProcessor::enableMPEPSlave(int ind)
   ML::MLlog4cplus::setAppl(this);      
   }	  
   catch (xcept::Exception &e) {
-    reasonForFailedState_ = "enabling FAILED: " + (string)e.what();
+    reasonForFailedState_ = "enabling FAILED: " + (std::string)e.what();
     fsm_.fireFailed(reasonForFailedState_,this);
     localLog(reasonForFailedState_);
   }
@@ -1448,7 +1450,7 @@ bool FUEventProcessor::stopClassic()
     if(hasShMem_) detachDqmFromShm();
   }
   catch (xcept::Exception &e) {
-    reasonForFailedState_ = "stopping FAILED: " + (string)e.what();
+    reasonForFailedState_ = "stopping FAILED: " + (std::string)e.what();
     localLog(reasonForFailedState_);
     fsm_.fireFailed(reasonForFailedState_,this);
   }
@@ -1476,7 +1478,7 @@ void FUEventProcessor::stopSlavesAndAcknowledge()
 	subs_[i].rcv(msg1,false);
       }
       catch(evf::Exception &e){
-	ostringstream ost;
+	std::ostringstream ost;
 	ost << "failed to get STOP - errno ->" << errno << " " << e.what(); 
 	reasonForFailedState_ = ost.str();
 	LOG4CPLUS_WARN(getApplicationLogger(),reasonForFailedState_);
@@ -1495,7 +1497,7 @@ void FUEventProcessor::stopSlavesAndAcknowledge()
 
 void FUEventProcessor::microState(xgi::Input *in,xgi::Output *out)
 {
-  string urn = getApplicationDescriptor()->getURN();
+  std::string urn = getApplicationDescriptor()->getURN();
   try{
     evtProcessor_.stateNameFromIndex(0);
     evtProcessor_.moduleNameFromIndex(0);
@@ -1606,9 +1608,9 @@ void FUEventProcessor::updater(xgi::Input *in,xgi::Output *out)
        << (nbSubProcesses_.value_ > 0 ? "MP " : " ") << "</div>"
        << "<div id=\"in\">" << getApplicationDescriptor()->getInstance() << "</div>";
   if(fsm_.stateName()->toString() != "Halted" && fsm_.stateName()->toString() != "halting")
-    *out << "<div id=\"hlt\"><a href=\"" << configString_.toString() << "\">HLT Config</a></div>" << endl;
+    *out << "<div id=\"hlt\"><a href=\"" << configString_.toString() << "\">HLT Config</a></div>" << std::endl;
   else
-    *out << "<div id=\"hlt\">Not yet...</div>" << endl;  
+    *out << "<div id=\"hlt\">Not yet...</div>" << std::endl;  
   *out << "<div id=\"sq\">" << squidPresent_.toString() << "</div>"
        << "<div id=\"vwl\">" << (supervising_ ? "Active" : "not initialized") << "</div>"
        << "<div id=\"mwl\">" << evtProcessor_.wlMonitoring() << "</div>";
