@@ -1,5 +1,12 @@
 2010-03-25 Emilio Meschi <emilio.meschi@cern.ch>
 
+	* tag V02-02-03
+	* remove all using namespace std;
+	* moved some common classes for msgq to Utilities
+	* new Vulture interface
+	
+2010-03-25 Emilio Meschi <emilio.meschi@cern.ch>
+
 	* tag V02-02-02
 	* remove using namespace std; from icc file
 	
